--- a/demo/package.json
+++ b/demo/package.json
@@ -2,17 +2,19 @@
   "nativescript": {
     "id": "org.nativescript.demo",
     "tns-ios": {
-      "version": "3.0.1"
+      "version": "3.1.0"
     },
     "tns-android": {
-      "version": "3.0.0"
+      "version": "3.1.1"
     }
   },
   "dependencies": {
+    "@types/pako": "^1.0.0",
     "nativescript-crypto": "../src",
     "nativescript-theme-core": "^1.0.4",
     "nativescript-unit-test-runner": "^0.3.4",
-    "tns-core-modules": "^3.0.0"
+    "pako": "^1.0.5",
+    "tns-core-modules": "^3.1.0"
   },
   "devDependencies": {
     "babel-traverse": "6.12.0",
@@ -24,7 +26,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-nativescript-launcher": "^0.4.0",
     "lazy": "1.0.11",
-    "nativescript-dev-typescript": "^0.4.5",
+    "nativescript-dev-typescript": "^0.5.0",
     "typescript": "^2.2.2"
   }
 }
